--- a/challenge2/index.html
+++ b/challenge2/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge 2 - colorful <Button></Button></title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Challenge 2 - Colorful Button</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
       <div class="button-border">
-        <button class="button">Start Coding!</button>
+        <button class="button">Start Coding</button>
       </div>
     </div>
   </body>
