all 25 challenges completed

--- a/challenge11/index.html
+++ b/challenge11/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SerchBar</title>
+    <title>Madagascar Flag</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <label for="search-field" class="hide">Search</label>
-      <input
-        type="search"
-        class="search-bar"
-        id="search-field"
-        placeholder="Search"
-      />
+    <div class="flag-Madagascar">
+      <div class="white"></div>
+      <div class="red"></div>
+      <div class="green"></div>
     </div>
   </body>
 </html>
