--- a/challenge15/index.html
+++ b/challenge15/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SerchBar</title>
+    <title>Niger Flag</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <label for="search-field" class="hide">Search</label>
-      <input
-        type="search"
-        class="search-bar"
-        id="search-field"
-        placeholder="Search"
-      />
+    <div class="flag-niger">
+      <div class="orange stripe"></div>
+      <div class="white stripe">
+        <div class="circle"></div>
+      </div>
+      <div class="green stripe"></div>
     </div>
   </body>
 </html>
