--- a/challenge17/index.html
+++ b/challenge17/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SerchBar</title>
+    <title>Toggle Switch</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <label for="search-field" class="hide">Search</label>
-      <input
-        type="search"
-        class="search-bar"
-        id="search-field"
-        placeholder="Search"
-      />
+      <label for="toggle">
+        <input type="checkbox" id="toggle" class="toggle-input" />
+        <div class="toggle-switch"></div>
+      </label>
     </div>
   </body>
 </html>
