--- a/challenge20/index.html
+++ b/challenge20/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colorful Button</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Progress Bar</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="button-border">
-        <button class="button">Start Coding</button>
+      <div class="progress-bar">
+        <div class="progress-status stage-2"></div>
       </div>
     </div>
   </body>
