--- a/challenge22/index.html
+++ b/challenge22/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colorful Button</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Loading Animation 3</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="button-border">
-        <button class="button">Start Coding</button>
-      </div>
+      <div class="circle"></div>
     </div>
   </body>
 </html>
