--- a/challenge24/index.html
+++ b/challenge24/index.html
@@ -3,18 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SerchBar</title>
+    <title>Animated Progress Bar</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <label for="search-field" class="hide">Search</label>
-      <input
-        type="search"
-        class="search-bar"
-        id="search-field"
-        placeholder="Search"
-      />
+    <div class="progress-bar">
+      <div class="progress-status"></div>
     </div>
   </body>
 </html>
