--- a/challenge6/index.html
+++ b/challenge6/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colorful Button</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Animation 2</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="button-border">
-        <button class="button">Start Coding</button>
-      </div>
+      <div class="square square1"></div>
+      <div class="square square2"></div>
+      <div class="square square3"></div>
     </div>
   </body>
 </html>
