--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Challenge 1 - Spoiler Revealer</title>
+    <title>Spoiler Revealer</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
