--- a/challenge14/index.html
+++ b/challenge14/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SerchBar</title>
+    <title>Sweden Flag</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <label for="search-field" class="hide">Search</label>
-      <input
-        type="search"
-        class="search-bar"
-        id="search-field"
-        placeholder="Search"
-      />
+    <div class="flag-sweden">
+      <div class="yellow1"></div>
+      <div class="yellow2"></div>
     </div>
   </body>
 </html>
