--- a/challenge5/index.html
+++ b/challenge5/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=\, initial-scale=1.0" />
-    <title>Challenge 5 - Loading Animation</title>
+    <title>Loading Animation</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
