--- a/challenge7/index.html
+++ b/challenge7/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SerchBar</title>
+    <title>Archery Target</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <label for="search-field" class="hide">Search</label>
-      <input
-        type="search"
-        class="search-bar"
-        id="search-field"
-        placeholder="Search"
-      />
+      <div class="ring ring1"></div>
+      <div class="ring ring2"></div>
+      <div class="ring ring3"></div>
+      <div class="ring ring4"></div>
     </div>
   </body>
 </html>
