--- a/challenge9/index.html
+++ b/challenge9/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SerchBar</title>
+    <title>France Flag</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <label for="search-field" class="hide">Search</label>
-      <input
-        type="search"
-        class="search-bar"
-        id="search-field"
-        placeholder="Search"
-      />
+    <div class="flag-france">
+      <div class="stripe blue"></div>
+      <div class="stripe white"></div>
+      <div class="stripe red"></div>
     </div>
   </body>
 </html>
