--- a/challenge6Loading Animation 2/index.html
+++ b/challenge6Loading Animation 2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Animation 2</title>
+    <title>Loading Animation 2</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
