--- a/challenge25Github Contribution Graph/index.html
+++ b/challenge25Github Contribution Graph/index.html
@@ -478,6 +478,6 @@
         </ul>
       </div>
     </div>
-    <!-- <script src="index.js"></script> -->
+    <!-- <script src="index.js"></script>1 -->
   </body>
 </html>
